# psych-api

./: .gitignore  Dockerfile  README.md  app.py  helpers.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: deployment_pipeline.yml
data/: cast.json  gus_nicknames.json  pineapples.json  quotes.json  trivia.json
dev_scripts/: make_build.sh  test_build.sh
src/: app.py
